--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
   "dev": "next dev",
+  "prebuild": "prisma generate",
   "build": "next build",
   "postinstall": "prisma generate",
   "start": "next start",
   "lint": "eslint"
+}
+
 }
 
   },
